fix transparent folio/loader in dark mode

--- a/app/assets/stylesheets/folio/_loader.sass
+++ b/app/assets/stylesheets/folio/_loader.sass
@@ -80,5 +80,11 @@ $folio-loader-inverse-foreground: white !default
   [data-bs-theme="dark"] &
     +inversed-loader-style
 
+    &--transparent
+      background-color: transparent
+
   @media (prefers-color-scheme: dark)
     +inversed-loader-style
+
+    &--transparent
+      background-color: transparent
